Update fb/ig sharing

--- a/Example/LumaKitExample/Info.plist
+++ b/Example/LumaKitExample/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>FacebookAppID</key>
+    <string>1326236122110662</string>
+    <key>FacebookClientToken</key>
+    <string>a59fb1bb3aca7f80b3b131535bb71019</string>
+    <key>FacebookDisplayName</key>
+    <string>AI Video</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -10,11 +16,13 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>lumakit.example</string>
+				<string>fb1326236122110662</string>
 			</array>
 		</dict>
 	</array>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>fbapi</string>
 		<string>snapchat</string>
 		<string>tiktoksharesdk</string>
 		<string>tiktokopensdk</string>
